<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp"
    android:background="@color/black"
    tools:context=".activities.CadastroActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="236dp"
            android:layout_height="149dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <!-- Texto de boas-vindas -->
        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SEJA BEM-VINDO"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <!-- Nome Completo -->
        <EditText
            android:id="@+id/NomeCompleto"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_edittext_selector"
            android:hint="Nome Completo"
            android:paddingHorizontal="16dp"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

        <!-- Número -->
        <EditText
            android:id="@+id/numero"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_edittext_selector"
            android:hint="Número"
            android:paddingHorizontal="16dp"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NomeCompleto" />

        <!-- E-mail -->
        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_edittext_selector"
            android:hint="E-mail Institucional"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numero" />

        <!-- Senha -->
        <EditText
            android:id="@+id/senha"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_edittext_selector"
            android:hint="Senha"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <!-- Confirmar Senha -->
        <EditText
            android:id="@+id/confirmarSenha"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_edittext_selector"
            android:hint="Confirmar Senha"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/senha" />

        <!-- Spinner para Cursos -->
        <Spinner
            android:id="@+id/spinnerCursos"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_edittext_selector"
            android:paddingHorizontal="16dp"
            android:spinnerMode="dropdown"
            android:popupBackground="#FFFF"
            android:textColor="#000000"
            android:prompt="@string/escolha_seu_curso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmarSenha" />

        <!-- Botão Cadastrar -->
        <Button
            android:id="@+id/btnCadastre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_selector"
            android:text="Cadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerCursos" />

        <!-- Texto para Login -->
        <TextView
            android:id="@+id/existingAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Já possui uma conta?"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCadastre" />

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Clique Aqui"
            android:textColor="#FFD700"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/existingAccountText" />

        <!-- ProgressBar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            style="?android:attr/progressBarStyleLarge"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>