<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    >


    <!-- Grupo principal -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_seusdados"
            android:icon="@drawable/person"
            android:title="Seus Dados" />

        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/feed"
            android:title="Feed" />

        <item
            android:id="@+id/nav_inscricoes"
            android:icon="@drawable/inscricao"
            android:title="Inscrições" />

        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/logout"
            android:title="Sair da Conta" />
    </group>

</menu>