<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/black"
    android:elevation="4dp"
    app:contentInsetStart="0dp"
    app:contentInsetLeft="0dp"
    app:contentInsetStartWithNavigation="0dp">

    <!-- Ícone do menu (hambúrguer) -->
    <ImageView
        android:id="@+id/icon_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_menuu"
        android:contentDescription="Menu"
        android:paddingStart="0dp"
        android:paddingEnd="16dp"
        android:layout_gravity="start|center_vertical"
        android:scaleType="centerInside" />

    <!-- Logo central -->
    <ImageView
        android:id="@+id/logo_central"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/logo"
        android:contentDescription="Logo"
        android:layout_gravity="center" />
</androidx.appcompat.widget.Toolbar>